Reverted then refined
I had to revert to an older repo due to something i broke and couldn't find. After that I refined more. Still looking for a way to fix he nav buttons... I am starting to like the way they look now.

--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <article class="mainPageHeader">
                 <ul class="mainPageInfo">
                     <section class="homePage"><!--Iam trying to make the classes very self discriptive-->
-                        <h1 class="lobster-regular">
+                        <h1 class="header paragraph">
                             Mariaan Otto
                         </h1>
                     </section>
@@ -68,24 +68,26 @@
             <article>
                 <li>
                     <p>
-                        Please do not hesitate to contact me for any queries or questions you may have.
+                        Thank you for taking the time to have a look at my website! 
+                        Please do not hesitate to contact me for any queries or questions you may 
+                        have.
                     </p>
-                    <h2 class="lobster-regular">
+                    <h2 class="paragraph">
                         Contact
                     </h2>
                 </li>
                 <li>
-                    <h3 class="lobster-regular">
+                    <h3 class="paragraph">
                         mariaanotto77@gmail.com
                     </h3>
                 </li>
                 <li>make this button pls
-                    <h4 class="lobster-regular">
+                    <h4 class="paragraph">
                         082 044 5454
                     </h4>
                 </li>
                 <li>
-                    <h5 class="lobster-regular">
+                    <h5 class="paragraph">
                         mariaanotto77@gmail.com
                     </h5>
                 </li>
