--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <article class="mainPageHeader">
                 <ul class="mainPageInfo">
                     <section class="homePage"><!--Iam trying to make the classes very self discriptive-->
-                        <h1 class= "header lobster-regular">
+                        <h1 class= "header paragraph">
                             Mariaan Otto
                         </h1>
-                        <li>
-                            <img src="image\CV website face foto.jpg" alt="face foto" class="button_img">
-                        </li>
-                        <p>
-                            Welcome to my CV website! This 
+                        <p class="paragraph">
+                            Welcome to my CV website!
                         </p>
+                        <li class="facePhoto">
+                            <img src="image\CV website face foto.jpg" alt="face foto">
+                        </li>
                     </section>
                 </ul>
             </header>
