--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
             <article class="mainPageHeader">
                 <ul class="mainPageInfo">
                     <section class="homePage"><!--Iam trying to make the classes very self discriptive-->
-                        <h1 class="lobster-regular">
+                        <h1 class="header paragraph">
                             Mariaan Otto
                         </h1>
                         <article class="skillsIntro">
@@ -69,15 +69,12 @@
                             </p>
                         </article>
                         <article class="skillsTitel">
-                            <h2 class="lobster-regular">
+                            <h2 class="paragraph">
                                 Skills
                             </h2>
-                            <section class="skillsSection">
+                            <section class="skillsSection paragraph">
                                 <h3 >
-                                    dfhgjhk
-                                    wsfegdfhgj
-                                    fdxgfhgjhk
-                                    dtryftuygi
+                                    
                                 </h3>
 
                             </section>
