--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,10 @@
             <article class="mainPageHeader">
                 <ul class="mainPageInfo">
                     <section class="homePage"><!--Iam trying to make the classes very self discriptive-->
-                        <h1 class="paragraph">
+                        <h1 class= "header paragraph">
+                            Mariaan Otto
+                        </h1>
+                        <p class="paragraph">
 
                             <br><br>
 
@@ -80,7 +83,7 @@
                             I am looking forward to starting this project in my free time.
                             I feel like the locals of George would benefit from this project a lot.
                             Not to mention the tourists that visit George, making George more user friendly!
-                        </h1>
+                        </p>
                     </section>
                 </ul>
             </article>
