--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" data-theme="pastel">
+<html lang="en" data-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
     <main class="main">
 
     <!--Lets go. Creating boxes inside boxes now. mainNav is my navigation tab for my buttons for pages-->    
-        <nav class="mainNav">
+        <nav class="mainNav" >
             <nav class="themeSwitch">
                 <i class="fa-solid fa-ice-cream" id="iconPastel"></i>
                 <i class="fa-solid fa-moon" id="iconMoon"></i>
@@ -74,11 +74,11 @@
                 <i class="dropbtn" class="fa-solid fa-caret-down"></i>
                     🐾
                 <ul class="dropDown-content">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="skills.html">Skills</a>
-                    <a href="projects.html">Projects</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="index.html" class="dropDown--units">Home</a>
+                    <a href="about.html" class="dropDown--units">About</a>
+                    <a href="skills.html" class="dropDown--units">Skills</a>
+                    <a href="projects.html"class="dropDown--units">Projects</a>
+                    <a href="contact.html" class="dropDown--units">Contact</a>
                 </ul>
             </button>
         </nav>
