Readme & Files Updated
I added a few things to the readme that I missed, and I linked the responsive dropdown menu in all sheets.

--- a/projects.html
+++ b/projects.html
@@ -72,12 +72,14 @@
                         <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                     </svg>
                 </i>
+                    
                 <ul class="dropDown-content">
-                    <a href="index.html">Home</a>
-                    <a href="about.html">About</a>
-                    <a href="skills.html">Skills</a>
-                    <a href="projects.html">Projects</a>
-                    <a href="contact.html">Contact</a>
+                    <a href="#" class="dropclosebtn"><i class="fa fa-close"></i></a>
+                    <a href="index.html" class="dropDown--item">Home</a>
+                    <a href="about.html" class="dropDown--item">About</a>
+                    <a href="skills.html" class="dropDown--item">Skills</a>
+                    <a href="projects.html"class="dropDown--item">Projects</a>
+                    <a href="contact.html" class="dropDown--item">Contact</a>
                 </ul>
             </button>
         </nav>
@@ -115,5 +117,6 @@
         </section>  
     </main>
     <script src="script/themeSwitch.js"></script>
+    <script src="script/responsiveDropdown.js"></script>
 </body>
 </html>
