--- a/contact.html
+++ b/contact.html
@@ -124,56 +124,8 @@
                 <li class="button">
                     <a href="skills.html" class="button_img">
                         <h1 class="lobster-regular"> Skills </h1>
-                        <svg class="roundedSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270.6 270.6"
-                            xml:space="preserve">
-                            <path fill="#d08aff" d="M0 0h270.6v270.6H0z" />
-                            <path fill="#2E95D1" d="M114.7 66.6H57.8v113.1h75.4V85.1z" />
-                            <path fill="#FFF" d="M114.7 85.9h19.2l-19.2-19.3z" />
-                            <path fill="#282D33"
-                                d="M49.1 84.6H70v4H49.1zM48.7 93.7h49.7v4H48.7zM48.7 102.8h49.7v4H48.7zM48.7 111.9h49.7v4H48.7zM48.7 120.9h32.2v4H48.7z" />
-                            <g>
-                                <path fill="#282D33"
-                                    d="m41.1 188.7-2.8-2.8 56.8-56.8 10.6 10.6 32.5-32.5 16.7 16.7 42.3-42.3 2.8 2.8-45.1 45.1-16.7-16.7-32.5 32.5-10.6-10.6z" />
-                                <path fill="#282D33" d="M203.3 98h-4V84.2h-13.8v-4h17.8z" />
-                            </g>
-                            <g>
-                                <path fill="#FFF"
-                                    d="M166.5 105.5V66.3c0-2.7-2.2-4.9-4.9-4.9h-2.1c-2.7 0-4.9 2.2-4.9 4.9v39.2h11.9z" />
-                                <path fill="#FFF"
-                                    d="M165 145.9v-48c0-2.7-1.7-4.9-3.8-4.9h-1.6c-2.1 0-3.8 2.2-3.8 4.9v48h9.2z" />
-                                <path fill="#282D33"
-                                    d="M150.8 98.9h-4V75.5c0-3.8 3.1-6.9 6.9-6.9h12.8v4h-12.8c-1.6 0-2.9 1.3-2.9 2.9v23.4zM154.5 103.7h12.2v4h-12.2zM154.5 143.8h12.2v4h-12.2z" />
-                                <path fill="#282D33"
-                                    d="M162.6 161.7h-4c0-2.8-1.4-6.3-2.2-6.7l-1.5-.4.1-1.5V147h4v5c2.5 2 3.6 7 3.6 9.7z" />
-                                <path fill="#282D33"
-                                    d="M162.6 161.7h-4c0-2.6 1.1-7.7 3.6-9.8v-5h4v7.7l-1.5.4c-.7.4-2.1 3.9-2.1 6.7z" />
-                            </g>
-                            <g>
-                                <path fill="#282D33"
-                                    d="M150.2 166.9c-3 0-4.5-2.3-5.6-3.9-1-1.5-1.4-2.1-2.3-2.1-.8 0-1.3.6-2.3 2.1-1.1 1.6-2.6 3.9-5.6 3.9s-4.5-2.3-5.6-3.9c-1-1.5-1.5-2.1-2.3-2.1-.8 0-1.3.6-2.3 2.1-1.1 1.6-2.6 3.9-5.6 3.9-3 0-4.5-2.3-5.6-3.9-1-1.5-1.5-2.1-2.3-2.1s-1.3.6-2.3 2.1c-1.1 1.6-2.6 3.9-5.6 3.9v-4c.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9 3 0 4.5 2.3 5.6 3.9 1 1.5 1.5 2.1 2.3 2.1.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9 3 0 4.5 2.3 5.6 3.9 1 1.5 1.5 2.1 2.3 2.1.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9s4.5 2.3 5.6 3.9c1 1.5 1.4 2.1 2.3 2.1v4z" />
-                            </g>
-                            <g>
-                                <path fill="#282D33"
-                                    d="M227.3 193.7h-48.7c-1.5 0-2.8-1.3-2.8-2.8v-66.5c0-1.5 1.3-2.8 2.8-2.8h48.7c1.5 0 2.8 1.3 2.8 2.8v66.5c0 1.5-1.3 2.8-2.8 2.8zm-47.5-4h46.3v-64.1h-46.3v64.1z" />
-                                <path fill="#282D33"
-                                    d="M227.3 186h-48.7c-1.5 0-2.8-1.3-2.8-2.8v-50.8h4V182h46.3v-49.6h4v50.8c0 1.5-1.3 2.8-2.8 2.8z" />
-                                <path fill="#2E95D1" d="M185.7 133.8h34.6v8.8h-34.6z" />
-                                <path fill="#282D33"
-                                    d="M184.2 149.5h6.3v4h-6.3zM194.6 149.5h6.3v4h-6.3zM205 149.5h6.3v4H205zM215.3 149.5h6.3v4h-6.3z" />
-                                <g>
-                                    <path fill="#282D33"
-                                        d="M184.2 157.3h6.3v4h-6.3zM194.6 157.3h6.3v4h-6.3zM205 157.3h6.3v4H205zM215.3 157.3h6.3v4h-6.3z" />
-                                </g>
-                                <g>
-                                    <path fill="#282D33"
-                                        d="M184.2 165.1h6.3v4h-6.3zM194.6 165.1h6.3v4h-6.3zM205 165.1h6.3v4H205zM215.3 165.1h6.3v4h-6.3z" />
-                                </g>
-                                <g>
-                                    <path fill="#282D33"
-                                        d="M184.2 173h6.3v4h-6.3zM194.6 173h6.3v4h-6.3zM205 173h6.3v4H205zM215.3 173h6.3v4h-6.3z" />
-                                </g>
-                            </g>
-                        </svg>
+                                                <svg class="roundedSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270.6 270.6" xml:space="preserve"><path fill="#a599b5" d="M0 0h270.6v270.6H0z"/><path fill="#2E95D1" d="M114.7 66.6H57.8v113.1h75.4V85.1z"/><path fill="#FFF" d="M114.7 85.9h19.2l-19.2-19.3z"/><path fill="#282D33" d="M49.1 84.6H70v4H49.1zM48.7 93.7h49.7v4H48.7zM48.7 102.8h49.7v4H48.7zM48.7 111.9h49.7v4H48.7zM48.7 120.9h32.2v4H48.7z"/><g><path fill="#282D33" d="m41.1 188.7-2.8-2.8 56.8-56.8 10.6 10.6 32.5-32.5 16.7 16.7 42.3-42.3 2.8 2.8-45.1 45.1-16.7-16.7-32.5 32.5-10.6-10.6z"/><path fill="#282D33" d="M203.3 98h-4V84.2h-13.8v-4h17.8z"/></g><g><path fill="#FFF" d="M166.5 105.5V66.3c0-2.7-2.2-4.9-4.9-4.9h-2.1c-2.7 0-4.9 2.2-4.9 4.9v39.2h11.9z"/><path fill="#FFF" d="M165 145.9v-48c0-2.7-1.7-4.9-3.8-4.9h-1.6c-2.1 0-3.8 2.2-3.8 4.9v48h9.2z"/><path fill="#282D33" d="M150.8 98.9h-4V75.5c0-3.8 3.1-6.9 6.9-6.9h12.8v4h-12.8c-1.6 0-2.9 1.3-2.9 2.9v23.4zM154.5 103.7h12.2v4h-12.2zM154.5 143.8h12.2v4h-12.2z"/><path fill="#282D33" d="M162.6 161.7h-4c0-2.8-1.4-6.3-2.2-6.7l-1.5-.4.1-1.5V147h4v5c2.5 2 3.6 7 3.6 9.7z"/><path fill="#282D33" d="M162.6 161.7h-4c0-2.6 1.1-7.7 3.6-9.8v-5h4v7.7l-1.5.4c-.7.4-2.1 3.9-2.1 6.7z"/></g><g><path fill="#282D33" d="M150.2 166.9c-3 0-4.5-2.3-5.6-3.9-1-1.5-1.4-2.1-2.3-2.1-.8 0-1.3.6-2.3 2.1-1.1 1.6-2.6 3.9-5.6 3.9s-4.5-2.3-5.6-3.9c-1-1.5-1.5-2.1-2.3-2.1-.8 0-1.3.6-2.3 2.1-1.1 1.6-2.6 3.9-5.6 3.9-3 0-4.5-2.3-5.6-3.9-1-1.5-1.5-2.1-2.3-2.1s-1.3.6-2.3 2.1c-1.1 1.6-2.6 3.9-5.6 3.9v-4c.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9 3 0 4.5 2.3 5.6 3.9 1 1.5 1.5 2.1 2.3 2.1.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9 3 0 4.5 2.3 5.6 3.9 1 1.5 1.5 2.1 2.3 2.1.8 0 1.3-.6 2.3-2.1 1.1-1.6 2.6-3.9 5.6-3.9s4.5 2.3 5.6 3.9c1 1.5 1.4 2.1 2.3 2.1v4z"/></g><g><path fill="#282D33" d="M227.3 193.7h-48.7c-1.5 0-2.8-1.3-2.8-2.8v-66.5c0-1.5 1.3-2.8 2.8-2.8h48.7c1.5 0 2.8 1.3 2.8 2.8v66.5c0 1.5-1.3 2.8-2.8 2.8zm-47.5-4h46.3v-64.1h-46.3v64.1z"/><path fill="#282D33" d="M227.3 186h-48.7c-1.5 0-2.8-1.3-2.8-2.8v-50.8h4V182h46.3v-49.6h4v50.8c0 1.5-1.3 2.8-2.8 2.8z"/><path fill="#2E95D1" d="M185.7 133.8h34.6v8.8h-34.6z"/><path fill="#282D33" d="M184.2 149.5h6.3v4h-6.3zM194.6 149.5h6.3v4h-6.3zM205 149.5h6.3v4H205zM215.3 149.5h6.3v4h-6.3z"/><g><path fill="#282D33" d="M184.2 157.3h6.3v4h-6.3zM194.6 157.3h6.3v4h-6.3zM205 157.3h6.3v4H205zM215.3 157.3h6.3v4h-6.3z"/></g><g><path fill="#282D33" d="M184.2 165.1h6.3v4h-6.3zM194.6 165.1h6.3v4h-6.3zM205 165.1h6.3v4H205zM215.3 165.1h6.3v4h-6.3z"/></g><g><path fill="#282D33" d="M184.2 173h6.3v4h-6.3zM194.6 173h6.3v4h-6.3zM205 173h6.3v4H205zM215.3 173h6.3v4h-6.3z"/></g></g></svg>
+
                     </a>
                 </li>
                 <li class="button">
@@ -312,42 +264,39 @@
         </nav>
         <section class="mainPageBody">
             <article class="mainPageHeader">
-                <h1 class="header paragraph">
+                <h1 class="header mainFont">
                     Mariaan Otto
                 </h1>
-                <p class="paragraph">
+                <p class="mainFont">
                     Thank you for taking the time to have a look at my website!
-                    Please do not hesitate to contact me for any queries or questions you may
-                    have.
                 </p>
-                <h2 class="paragraph">
-                    Contact
-                </h2>
+                
                 <form class="contactForm">
-                    <input type="email" placeholder="Email">
+                    <h2 class="mainFont">
+                        Contact
+                    </h2>
+                    <input type="email" placeholder="Email Address"> <!--I removed some aspects of the -->
                     <input type="text" placeholder="Subject">
                     <input type="textarea" placeholder="Message">
                     <button> Send </button>
                 </form>
-
-                <h3 class="paragraph">
-                    mariaanotto77@gmail.com
-                </h3>
-
-
-                <h4 class="paragraph">
+                <h4 class="mainFont">
                     082 044 5454
                     <i class="fa-brands fa-whatsapp"></i>
                 </h4>
-                <h5 class="paragraph">
+                <h5 class="mainFont">
                     mariaanotto77@gmail.com
                     <i class="fa-solid fa-envelope"></i>
                 </h5>
             </article>
         </section>
     </main>
+    <footer> 
+        <p>&copy; 2025 Project M. All rights reserved.</p>
+    </footer>
     <script src="script/themeSwitch.js"></script>
     <script src="script/responsiveDropdown.js"></script>
+    
 </body>
 
-</html>
+</html></ul>
