Small styles changes

--- a/about.html
+++ b/about.html
@@ -249,7 +249,6 @@
                             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
                     </svg>
                 </i>
-
                 <ul class="dropDown-content">
                     <a href="#" class="dropclosebtn"><i class="fa fa-close"></i></a>
                     <a href="index.html" class="dropDown--item">Home</a>
@@ -265,47 +264,56 @@
                 <h1 class="header mainFont">
                     Mariaan Otto
                 </h1>
-                <p class="mainFont">
-
-                    <br><br>
-
-                    Hi! Welcome to my website. I am new to programming and I am currently learning HTML,
+            <ul class="items">
+                <li class="item">
+                <div class="inner">
+                    <h4 class="cntTitle">Hi!</h4>
+                    <p class="mainFont">Welcome to my website. I am new to programming and I am currently learning HTML,
                     CSS and JavaScript. I am also learning how to use GitHub and Git.
                     I am excited to learn more about programming and to start creating my own projects.
                     In the past I have briefly looked at Python 3, as this is sofar the most apealing
-                    language to me, but was I suprised to see how much I enjoyed HTML and CSS.
-
-                    <br><br>
-
-                    I am starting out my programming career a little bit late, at 27, but I am enjoying
-                    myself a lot with it. I am a qualified pastry cheff and have worked overseas
-                    for a year, coming back to work, and later ran the pastry department at Fancourt.
-                    At fancourt I was very involved with management and did training on a few topics,
-                    including Chairing Disiplinary Hearings, Conflict Management and training on how
-                    to keep staff motivated and suported.
-
-                    <br><br>
-
-                    After facourt i ventured into administration where I worked as a secretary at a
-                    concrete factory. I was responsible for all basic administration, production lists,
-                    stock controle and later started making solicone moulds for the factory.
-
-                    <br><br>
-
-                    Currently I am working as a personal assistant to Engela Otto Podiatry Inc.
-                    Here I do any and everything asked of me. If i dont know how to do something,
-                    I figure it out. From Sage accounting to making appointments, to making lunch,
-                    to finding affordable stock for the practice to splitting the practice and managing
-                    the business account. I deal with as much paperwork as
-                    possible so that Engela can focus on her patients. If she dosnt have to do it,
-                    I do it.
-
-                    <br><br>
-
-                    I have loved everything I have done so far and I have learned so much. I am very
-                    excited to see where my programming career will take me.
-                </p>
+                    language to me, but was I suprised to see how much I enjoyed HTML and CSS.</p>
+                </div>
                 </li>
+                <li class="item">
+                <div class="inner">
+                    <h4 class="cntTitle">BLOCK</h4>
+                    <p class="mainFont">I have a certificate for Culinary Arts - Patiserie and worked overseas in a Michelin star 
+                    restaurant, coming back to work, and later run the pastry department at Fancourt Golf Estate.
+                    At Fancourt I was very involved with management and did training on a few topics,
+                    including Chairing Disiplinary Hearings, Conflict Management and training on how
+                    to keep staff motivated and suported.</p>
+                </div>
+                </li>
+                <li class="item">
+                <div class="inner">
+                    <h4 class="cntTitle">BLOCK</h4>
+                    <p class="mainFont">After Facourt Golf Estate I ventured into an administrative position where I worked as a secretary at a
+                    concrete factory. I was responsible for all basic administration, production lists,
+                    stock control, staff management and later started making solicone moulds for the factory.</p>
+                </div>
+                </li>
+                <li class="item">
+                <div class="inner">
+                    <h4 class="cntTitle">BLOCK</h4>
+                    <p class="mainFont"> Currently I am working as a Personal Assistant to Engela Otto Podiatry Inc.
+                    If I dont know how to do something, I figure it out. My daily tasks in managing and organising 
+                    Engela and her Practice ranges from Sage accounting to making appointments, 
+                        to finding affordable stock for the practice to splitting the practice and managing 
+                        the business account. I deal with as much paperwork as
+                    possible so that Engela can focus on her patients. While being a PA, I study programming on
+                    the side too.
+                    </p>
+                </div>
+                </li>
+                <li class="item">
+                <div class="inner">
+                    <h4 class="cntTitle">BLOCK</h4>
+                    <p class="mainFont">I have loved everything I have done so far and I have learned so much. I am very
+                    excited to see where my programming career will take me.</p>
+                </div>
+                </li>
+            </ul>    
             </article>
         </section>
         </ul>
