--- a/skills.html
+++ b/skills.html
@@ -123,7 +123,7 @@
                     </a>
                 </li>
                 <li class="button">
-                    <!--this button image was a very bright blue, I changed it to a softer color to match the color theme of the page-->
+                    <!--this button image was a very bright blue, I changed it to a softer color to match the color theme of the page better-->
                     <a href="skills.html" class="button_img button--active">
                         <h1 class="lobster-regular"> Skills </h1>
                         <svg class="roundedSvg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270.6 270.6"
@@ -329,7 +329,7 @@
                                 <p>2017</p>
                             </td>
                             <td class="timeLineInfoCell mainFont">
-                                Culinary Arts:
+                                Fancourt - Culinary Arts:
                                 <br>
                                 Time
                                 <br>
@@ -345,21 +345,23 @@
                                 <p>2021</p>
                             </td>
                             <td class="timeLineInfoCell mainFont">
-                                Secretarial:
+                                Southern Cape Fountains - Secretarial:
                                 <br>
                                 Organisation
                                 <br>
                                 Silicone Mould Making
                                 <br>
                                 Production Management
+                                <br>
+                                Financial Admin
                             </td>
                         </tr>
                         <tr>
                             <td class="timeLineYearCell mainFont">
-                                <p>2025</p>
+                                <p>2023</p>
                             </td>
                             <td class="timeLineInfoCell mainFont">
-                                Personal Assistant:
+                                Engela Otto Podiatry Inc. - Personal Assistant:
                                 <br>
                                 Patient Bookings
                                 <br>
