--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@
                 </i>
 
                 <ul class="dropDown-content">
-                    <a href="#" class="dropclosebtn"><i class="fa fa-close"></i></a>
+                    <a href="#" class="dropclosebtn"><i class="fa fa-close"></i></a> <!--the # is a placeholder for a link-->
                     <a href="index.html" class="dropDown--item">Home</a>
                     <a href="about.html" class="dropDown--item">About</a>
                     <a href="skills.html" class="dropDown--item">Skills</a>
